# Man8S-oci

./: README.md  pyproject.toml
locales/en-us/: README.md
src/mbctl/: main.py
src/mbctl/config_formats/: __init__.py  env_file_tools.py  man8s_config.py
src/mbctl/config_generate/: generate_nspawn_from_configs.py
src/mbctl/exec/: container_management.py  create_nspawn_container_from_oci_url.py  recreate_man8s_container_rootfs.py  remove_container.py  shell_into_nspawn_container.py
src/mbctl/init_system/: man8s_add_initsystem.py
src/mbctl/resources/: __init__.py
src/mbctl/resources/busybox-init/: busybox-init.sh  busybox-wait-for-network.sh
src/mbctl/resources/busybox-networking/: default.script
src/mbctl/resources/man8s-init/: 00-init.sh  10-load-helpers.sh  11-load-envs.sh  20-copy-protected-dirs.sh  50-dhcp-client.sh  70-add-yggdrasil-route.sh  80-connection-check.sh  99-application.sh  lib-do-until-success.sh
src/mbctl/resources/nspawn-files/: netns-init.nspawn  netns-noinit.nspawn  netns-systemd.nspawn  network_isolated.nspawn
src/mbctl/resources/utils/: man8shell.sh
src/mbctl/utils/: file_operate.py  man8config.py  man8log.py
tests/: test_mbctl_create_container.py
